--- a/WebChatApp/wwwroot/Template/Register.html
+++ b/WebChatApp/wwwroot/Template/Register.html
@@ -21,7 +21,7 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 
     <!--Custom styles-->
-    <link rel="stylesheet" type="text/css" href="/css/site.css">
+    <link rel="stylesheet" type="text/css" href="/css//site.css">
 
     <script type="text/javascript" src="/js/site.js"></script>
 
@@ -53,7 +53,7 @@
                     
                 </div>
                 <div>
-                    <a href="Pages/index.cshtml">Sign In Instead</a>
+                    <a href="">Sign In Instead</a>
                 </div>
             </div>
         </div>
