--- a/WebChatApp/Pages/Index.cshtml
+++ b/WebChatApp/Pages/Index.cshtml
@@ -24,7 +24,7 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 
     <!--Custom styles-->
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="~/css//site.css">
 
     <script src="/js/site.js"></script>
 </head>
