--- a/WebChatApp/wwwroot/Template/Register.html
+++ b/WebChatApp/wwwroot/Template/Register.html
@@ -50,10 +50,9 @@
                 </div>
                 <div>
                     <button type="submit" class="btn float-right login_btn" onclick="RegisterForm();">Register</button>
-                    
                 </div>
                 <div>
-                    <a href="">Sign In Instead</a>
+                    <a href="/">Sign In Instead</a>
                 </div>
             </div>
         </div>
