--- a/WebChatApp/Pages/Index.cshtml
+++ b/WebChatApp/Pages/Index.cshtml
@@ -55,11 +55,11 @@
                         </div>
                         <div class="form-group">
                             @*<input type="submit" value="Login" class="btn float-right login_btn">*@
-                            <button type="button" class="btn float-right login_btn" id="btnAdd" onclick="LoginForm();">Login</button>
+                            <button  type="button"  class="btn float-right login_btn" onclick="LoginForm();">Login</button>
                         </div>
                     </form>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer">   
                         <div class="d-flex justify-content-center links">
                             Don't have an account? <a href="~/Template//Register.html">Sign Up</a>
                         </div>
