Added: Filter the sender messages & receiver messages

--- a/WebChatApp/wwwroot/Template/Message.html
+++ b/WebChatApp/wwwroot/Template/Message.html
@@ -14,8 +14,8 @@
         </div>
         <div id="chatBox">
             <div id="chatArea">
-                    <input id="messageToSend" type="text" placeholder="Type a message" autocomplete="off" />
-                    <button type="button" id="sendButton" onclick="SendMessage()">Send</button>
+                        <input id="messageToSend" type="text" placeholder="Type a message" autocomplete="off" />
+                        <button type="button" id="sendButton" onclick="SendMessage()">Send</button>
             </div>
         </div>
     </center>
@@ -25,14 +25,15 @@
         }
         #chatBox {
             background-color: pink;
-            height: 38rem;
+            height: auto;
             width: 50rem;
             margin-top: 1rem;
+           
         }
 
         #chatArea{
             margin-left:10px;
-            height:30rem;
+            height:auto;
             width:42rem;
             background-color:paleturquoise;
             margin-top:40px;
@@ -71,6 +72,7 @@
         #messageToSend{
             padding:13px;
             width:28rem;
+            font-size:20px;
         
         }
     </style>
